# visgate-deploy-api

./: .gitignore  AGENT.md  AGENTS.md  BRANDING_UPDATE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_ISOLATION.md  DEPLOYMENT_STRATEGY.md  LICENSE  README.md  STATUS.md  UPDATE_NOTES.md  docker-compose.local.yml  r2_inference_example.py  runpod-flash.md
.github/: pull_request_template.md
deploy-api/: .dockerignore  .env.example  .gcloudignore  .pre-commit-config.yaml  =2.13.0  Dockerfile  README.md  USAGE.md  cloudbuild.yaml  deploy.sh  deploy_with_keys.sh  firestore.indexes.json  patch_dependencies.py  patch_dependencies2.py  patch_dependencies3.py  patch_dependencies4.py  pyproject.toml  requirements-dev.txt  requirements.txt
deployment-orchestrator/: .env.example  .pre-commit-config.yaml  README.md  USAGE.md  cloudbuild.yaml  deploy.sh  deploy_with_keys.sh  pyproject.toml  requirements.txt
deployment-orchestrator/src/: main.py
deployment-orchestrator/src/api/routes/: __init__.py  deployments.py
deployment-orchestrator/src/core/: __init__.py  config.py  errors.py  telemetry.py
deployment-orchestrator/src/models/: __init__.py  entities.py  model_specs_registry.py
deployment-orchestrator/src/services/: memory_repo.py  runpod.py
deployment-orchestrator/tests/unit/: test_api_deployments.py  test_config.py  test_gpu_registry.py  test_models.py
inference/: .dockerignore  Dockerfile  Dockerfile.audio  Dockerfile.video  README.md  build-and-push.sh  build_all.sh  requirements-audio.txt  requirements-video.txt  requirements.txt
scripts/: cleanup_all_firestore.py  (+25 more)
(+93 files in other folders)
